Pass the spec object using dependency injection